@@ -8,22 +8,24 @@ import java.util.*;
 public class Main {
     public static void main(String[] args) {
         Path path = Paths.get("module_9", "mappa_di_righe", "src", "righe.txt");
-        ArrayList<String> file = readFile(path.toString());
 
+        List<String> file = readFile(path.toString());
         Map<String, List<String>> map = createMap(file);
 
         System.out.println(map);
 
     }
 
-    public static ArrayList<String> readFile(String path) {
+    public static List<String> readFile(String path) {
         ArrayList<String> file = new ArrayList<>();
 
         try {
-            Scanner reader = new Scanner(new BufferedReader(new FileReader(path)));
+            BufferedReader reader = new BufferedReader(new FileReader(path));
 
-            while (reader.hasNext()) {
-                file.add(reader.nextLine());
+            String line = reader.readLine();
+            while (line != null) {
+                file.add(line);
+                line = reader.readLine();
             }
             reader.close();
 
@@ -34,7 +36,7 @@ public class Main {
         return file;
     }
 
-    public static Map<String, List<String>> createMap(ArrayList<String> file) {
+    public static Map<String, List<String>> createMap(List<String> file) {
         Map<String, List<String>> map = new HashMap<>();
 
         for (String s : file) {
@@ -43,7 +45,7 @@ public class Main {
             String key = splitKeyValue[0];
 
             String[] splitValueValue = splitKeyValue[1].split(",");
-            List<String> value = new ArrayList<>(Arrays.asList(splitValueValue));
+            List<String> value = List.of(splitValueValue);
 
             map.put(key, value);
         }
